CSS fix on navigation bar on mobile devices

--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -18,9 +18,6 @@
   text-decoration: none;
   text-align: center;
 
-  @include breakpoint($medium) {
-    display: none;
-  }
 }
 
 .site-nav {
@@ -67,7 +64,7 @@
 
 .masthead {
   @include clearfix;
-  margin-bottom: 1em;
+  margin-bottom: 0em;
   text-align: center;
 }
 
